# unitTest

./: CMakeLists.txt  how_to_test.txt
src/: circle.cpp  circle.h  mystring.cpp  mystring.h  point.h  polygon.h  polygontypes.h  shape.cpp  shape.h  world.cpp  world.h
tests/: CMakeLists.txt  cpptest.h
tests/shapes/: CMakeLists.txt  main.cpp
tests/string/: CMakeLists.txt  main.cpp
tests/world/: CMakeLists.txt  main.cpp
